Fixed the sulphur error and made the lobby not set message configurable

--- a/src/config.yml
+++ b/src/config.yml
@@ -1,3 +1,7 @@
+#Messages
+Messages:
+   prefix: "&9&lDevolution &8> &f"
+   lobbynotset: "Lobby is not set"
 golem-weapon-name: "GolemWeapon"
 blaze-weapon-name: "BlazeWeapon"
 spider-weapon-name: "SpiderWeapon"
